Improved location logic. Crashes should restart main activity. New custom bookmark picker. Formatting changes because of new Eclipse install.